generate node to the right

--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@xyflow/react": "^12.8.4",
     "ai": "^5.0.39",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
