--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.511.0",
+    "motion": "^12.23.12",
     "next": "latest",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
